# humor-api-clients

./: README.md  humorapi-openapi-3.json
android/: README.md  build.gradle  pom.xml
angular/: configuration.ts
clojure/: project.clj
cpp/: README.md
cpp/client/: CMakeLists.txt  OAIAnalyze_joke_200_response.cpp  OAIAnalyze_joke_200_response.h  OAIEnum.h  OAIGenerate_nonsense_word_200_response.cpp  OAIGenerate_nonsense_word_200_response.h  OAIHelpers.cpp  OAIHelpers.h  OAIHttpFileElement.cpp  OAIHttpFileElement.h  OAIHttpRequest.cpp  OAIHttpRequest.h  OAIJokesApi.cpp  OAIJokesApi.h  OAIMemesApi.cpp  OAIMemesApi.h  OAIOauth.h  OAIObject.h  OAIOtherApi.cpp  OAIOtherApi.h  OAIPraise_200_response.cpp  OAIPraise_200_response.h  OAIRandom_joke_200_response.cpp  OAIRandom_joke_200_response.h  OAIRandom_meme_200_response.cpp  OAIRandom_meme_200_response.h  OAIRate_word_200_response.cpp  OAIRate_word_200_response.h  OAISearch_gifs_200_response.cpp  OAISearch_gifs_200_response.h  OAISearch_gifs_200_response_images_inner.cpp  OAISearch_gifs_200_response_images_inner.h  OAISearch_jokes_200_response.cpp  OAISearch_jokes_200_response.h  OAISearch_jokes_200_response_jokes_inner.cpp  OAISearch_jokes_200_response_jokes_inner.h  OAISearch_memes_200_response.cpp  OAISearch_memes_200_response.h  OAISearch_memes_200_response_memes_inner.cpp  OAISearch_memes_200_response_memes_inner.h  (+5 more)
cpp/client/com.humorapi/: OAIJokesApi.cpp  OAIJokesApi.h  OAIMemesApi.cpp  OAIMemesApi.h  OAIOtherApi.cpp  OAIOtherApi.h
cpp/client/com.humorapi.client.model/: OAIInline_response_200.cpp  OAIInline_response_200.h  OAIInline_response_200_1.cpp  OAIInline_response_200_1.h  OAIInline_response_200_2.cpp  OAIInline_response_200_2.h  OAIInline_response_200_3.cpp  OAIInline_response_200_3.h  OAIInline_response_200_4.cpp  OAIInline_response_200_4.h  OAIInline_response_200_5.cpp  OAIInline_response_200_5.h  OAIInline_response_200_6.cpp  OAIInline_response_200_6.h  OAIInline_response_200_7.cpp  OAIInline_response_200_7.h  OAIInline_response_200_8.cpp  OAIInline_response_200_8.h  OAIInline_response_200_9.cpp  OAIInline_response_200_9.h
csharp/: README.md  appveyor.yml  humorapi.sln
dart/: README.md
elixir/: README.md  mix.exs
elm/: README.md
erlang/: rebar.config
go/: README.md  api_jokes.go  api_memes.go  api_other.go  client.go  configuration.go  go.mod  model_analyze_joke_200_response.go  model_generate_nonsense_word_200_response.go  model_inline_response_200.go  model_inline_response_200_1.go  model_inline_response_200_2.go  model_inline_response_200_3.go  model_inline_response_200_4.go  model_inline_response_200_5.go  model_inline_response_200_6.go  model_inline_response_200_7.go  model_inline_response_200_8.go  model_inline_response_200_9.go  model_praise_200_response.go  model_random_joke_200_response.go  model_random_meme_200_response.go  model_rate_word_200_response.go  (+9 more)
(+1469 files in other folders)
